--- a/src/ui/StaffPanel.form
+++ b/src/ui/StaffPanel.form
@@ -321,6 +321,9 @@
                   </Constraints>
                 </Component>
                 <Component class="javax.swing.JTextField" name="jtfPassword">
+                  <Events>
+                    <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtfPasswordKeyReleased"/>
+                  </Events>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                       <AbsoluteConstraints x="130" y="20" width="120" height="-1"/>
