--- a/src/ui/StaffPanel.form
+++ b/src/ui/StaffPanel.form
@@ -199,7 +199,7 @@
                   <StringArray count="8">
                     <StringItem index="0" value="PMR"/>
                     <StringItem index="1" value="SPM"/>
-                    <StringItem index="2" value="Diploma or equivalent"/>
+                    <StringItem index="2" value="Diploma"/>
                     <StringItem index="3" value="Advanced Diploma"/>
                     <StringItem index="4" value="Bachelor&apos;s Degree"/>
                     <StringItem index="5" value="Graduate Diploma"/>
@@ -476,9 +476,7 @@
               <SubComponents>
                 <Component class="javax.swing.JTable" name="jtStaff">
                   <Properties>
-                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="0" rowCount="0"/>
-                    </Property>
+                    <Property name="autoCreateColumnsFromModel" type="boolean" value="false"/>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="1"/>
                     </Property>
@@ -487,6 +485,9 @@
                       <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
                     </Property>
                   </Properties>
+                  <BindingProperties>
+                    <BindingProperty name="elements" source="dynamicPanel" sourcePath="${}" target="jtStaff" targetPath="elements" updateStrategy="0" immediately="true"/>
+                  </BindingProperties>
                 </Component>
               </SubComponents>
             </Container>
