--- a/src/ui/PetPanel.form
+++ b/src/ui/PetPanel.form
@@ -313,6 +313,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Add Pet"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jbtAddPetMouseClicked"/>
+                  </Events>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                       <AbsoluteConstraints x="220" y="290" width="-1" height="-1"/>
