--- a/src/ui/ChangePasswordPanel.form
+++ b/src/ui/ChangePasswordPanel.form
@@ -123,6 +123,9 @@
         </Property>
         <Property name="label" type="java.lang.String" value="Confirm"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jbtConfirmMouseClicked"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="220" y="320" width="70" height="-1"/>
