--- a/src/ui/CustomerPanel.form
+++ b/src/ui/CustomerPanel.form
@@ -406,10 +406,13 @@
                     </Constraint>
                   </Constraints>
                 </Component>
-                <Component class="javax.swing.JButton" name="jtfAddCus">
+                <Component class="javax.swing.JButton" name="jbtAddCus">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Add Customer"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jbtAddCusMouseClicked"/>
+                  </Events>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                       <AbsoluteConstraints x="270" y="280" width="-1" height="-1"/>
