--- a/src/ui/SchedulePanel.form
+++ b/src/ui/SchedulePanel.form
@@ -429,6 +429,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Add Schedule"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jbtAddScheduleMouseClicked"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="290" y="230" width="-1" height="-1"/>
