--- a/src/ui/ServicePanel.form
+++ b/src/ui/ServicePanel.form
@@ -267,6 +267,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Add Service"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jbtAddServiceMouseClicked"/>
+                  </Events>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                       <AbsoluteConstraints x="250" y="320" width="-1" height="-1"/>
