--- a/src/ui/TransactionPanel.form
+++ b/src/ui/TransactionPanel.form
@@ -358,6 +358,7 @@
                 <Property name="text" type="java.lang.String" value="Add Service Item"/>
               </Properties>
               <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jbtAddServiceMouseClicked"/>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtAddServiceActionPerformed"/>
               </Events>
               <Constraints>
