--- a/src/ui/StaffPanel.form
+++ b/src/ui/StaffPanel.form
@@ -220,7 +220,7 @@
             <Component class="javax.swing.JComboBox" name="jcbPosition">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="7">
+                  <StringArray count="8">
                     <StringItem index="0" value="Senior Veterinerian"/>
                     <StringItem index="1" value="Veterinerian"/>
                     <StringItem index="2" value="Receptionist"/>
@@ -228,6 +228,7 @@
                     <StringItem index="4" value="Medical Assistant"/>
                     <StringItem index="5" value="Clerk"/>
                     <StringItem index="6" value="General Staff"/>
+                    <StringItem index="7" value="Manager"/>
                   </StringArray>
                 </Property>
               </Properties>
@@ -477,6 +478,9 @@
                 <Component class="javax.swing.JTable" name="jtStaff">
                   <Properties>
                     <Property name="autoCreateColumnsFromModel" type="boolean" value="false"/>
+                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
+                      <Table columnCount="0" rowCount="0"/>
+                    </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="1"/>
                     </Property>
@@ -485,9 +489,6 @@
                       <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
                     </Property>
                   </Properties>
-                  <BindingProperties>
-                    <BindingProperty name="elements" source="dynamicPanel" sourcePath="${}" target="jtStaff" targetPath="elements" updateStrategy="0" immediately="true"/>
-                  </BindingProperties>
                 </Component>
               </SubComponents>
             </Container>
