Modify and delete function 15% complete

--- a/src/ui/PaymentPanel.form
+++ b/src/ui/PaymentPanel.form
@@ -60,6 +60,9 @@
                   <Image iconType="3" name="/images/search.png"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel1MouseClicked"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="530" y="40" width="-1" height="-1"/>
@@ -367,6 +370,7 @@
                     <Property name="text" type="java.lang.String" value="Modify Payment"/>
                   </Properties>
                   <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jbtModifyPayMouseClicked"/>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtModifyPayActionPerformed"/>
                   </Events>
                   <Constraints>
@@ -380,6 +384,7 @@
                     <Property name="text" type="java.lang.String" value="Delete Payment"/>
                   </Properties>
                   <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jbtDeletePayMouseClicked"/>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtDeletePayActionPerformed"/>
                   </Events>
                   <Constraints>
