--- a/src/ui/LoginFrame.form
+++ b/src/ui/LoginFrame.form
@@ -114,6 +114,9 @@
             </Property>
             <Property name="toolTipText" type="java.lang.String" value="Click to login."/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jlblLogin2MouseClicked"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="170" y="270" width="-1" height="-1"/>
